# torchtree-scipy

./: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
test/evolution/: test_site_model.py
torchtree_scipy/: __init__.py
torchtree_scipy/cli/: __init__.py
torchtree_scipy/evolution/: site_model.py
