[metadata]
name = project_name
version = 1.0.0
url = https://github.com/author_name/project_urlname
author = author_name
author_email = autor_email
keywords = project_keyword1, project_keyword2
description = project_description
long_description = file: README.md
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research",
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =.
install_requires =
    torchtree
    numpy>=1.7
    torch>=1.9

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
test =
    pytest

[flake8]
max-line-length = 88
ignore = E203, W503
